Task #36, 35: fix bugs with PUT /transactions, GET, POST /goals